<resources>
    <string name="app_name">Money</string>
    <string name="chart">Chart</string>
    <string name="total">Total:</string>
    <string name="add_category">Add Category</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="overview">Overview</string>
    <string name="piechartcolor">piechartColor</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">amount</string>
    <string name="description_optional">description (optional)</string>
</resources>
