<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.merltech.money.MainActivity"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageButton
        android:id="@+id/overviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/overview"
        android:onClick="ShowListOverview"
        android:src="@drawable/overview_list"
        app:layout_constraintRight_toLeftOf="@+id/chartButton"
        app:layout_constraintTop_toTopOf="@+id/chartButton" />

    <ImageButton
        android:id="@+id/chartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/chart"
        android:src="@drawable/overview_chart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/total"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/totalLabel"
        app:layout_constraintBottom_toBottomOf="@+id/chartButton"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/overviewButton"
        android:layout_marginRight="8dp" />

    <GridView
        android:id="@+id/categoriesGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:drawSelectorOnTop="false"
        android:gravity="center"
        android:numColumns="2"
        android:overScrollMode="never"
        android:padding="10dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartButton"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
